<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/keywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@id/keyword"
        android:layout_marginTop="23dp"
        android:text="@string/keywordLabel" />

    <TextView
        android:id="@+id/keywordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/keywordLabel"
        android:layout_below="@id/keywordLabel"
        android:text="@string/mandatoryFieldError"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <EditText
        android:id="@+id/keyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/keywordError"
        android:layout_marginStart="17dp"
        android:ems="10"
        android:hint="@string/keywordHint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/keyword"
        android:layout_below="@id/keyword"
        android:text="@string/categoryLabel" />

    <Spinner
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/categoryLabel"
        android:layout_below="@id/categoryLabel"
        android:entries="@array/cat_array" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/categories"
        android:layout_below="@id/categories"
        android:text="@string/distanceLabel" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/distanceLabel"
        android:layout_below="@id/distanceLabel"
        android:ems="10"
        android:hint="@string/distanceHint"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/distance"
        android:layout_below="@id/distance"
        android:text="@string/fromLabel" />

    <RadioGroup
        android:id="@+id/locationGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/fromLabel"
        android:layout_below="@id/fromLabel">

        <RadioButton
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/currentLocationLabel"/>

        <RadioButton
            android:id="@+id/otherLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherLocationLabel"/>

        <TextView
            android:id="@+id/inputLocationError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mandatoryFieldError"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <AutoCompleteTextView
            android:id="@+id/inputLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputLocationHint"
            android:enabled="false"/>
    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/locationGroup"
        android:layout_below="@id/locationGroup"
        android:text="@string/searchButtonLabel" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationGroup"
        android:layout_toEndOf="@id/searchButton"
        android:text="@string/clearButtonLabel" />
</RelativeLayout>
